--- a/perfumes.html
+++ b/perfumes.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>EREBUS - Inicio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Perfumes - EREBUS</title>
+<link href="https://fonts.googleapis.com/css2?family=Neblina&display=swap" rel="stylesheet">
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Neblina&display=swap');
-
 :root{
   --color-primary:#000;
-  --color-secondary:#555;
   --color-background:#fff;
   --color-accent:#e0e0e0;
   --color-text:#333;
@@ -17,98 +15,87 @@
   --font-title:'Neblina', sans-serif;
 }
 *{box-sizing:border-box;margin:0;padding:0}
-html, body{width:100%;margin:0;padding:0;overflow-x:hidden;}
-body{
-  font-family:var(--font-family);
-  background:var(--color-background);
-  color:var(--color-text);
-  line-height:1.6;
-  padding-top:120px;
-}
+body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
 
-/* HEADER */
+/* ===== HEADER COMÚN ===== */
 header{
   position:fixed;top:0;left:0;width:100%;
   background:var(--color-primary);color:var(--color-background);z-index:1000;
   transition:all .3s ease;
 }
-.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
-.logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin:0;font-family: var(--font-title);}
+.logo-container{
+  display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s;
+}
+.logo-container img{height:50px;margin-right:10px;}
+.logo-container h1{font-family:var(--font-title);font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
-
-/* NAV */
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 
-/* HERO - BANNERS */
-.hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
-.banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
-.banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
-.banner img:hover{ transform:scale(1.05); }
-.scroll-indicator{display:none;position:absolute;right:10px;bottom:10px;font-size:1.2rem;background:rgba(0,0,0,0.5);color:#fff;padding:0.3rem 0.6rem;border-radius:4px;z-index:10;}
-@media(max-width:1024px){
-  .hero-banners{flex-wrap: nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling: touch;}
-  .banner{flex:0 0 100vw;scroll-snap-align:center;}
-  .scroll-indicator{display:block;animation: bounce 1s infinite alternate;}
+/* MAIN PERFUMES */
+main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
+h1{margin-bottom:40px;margin-top:0;font-family: var(--font-title);}
+
+/* Grid responsivo */
+.perfumes{display:grid;gap:20px;justify-items:center;grid-template-columns:repeat(2,1fr);}
+@media(min-width:1025px){.perfumes{grid-template-columns:repeat(5,1fr)}}
+
+.perfume{
+  background:#fff;
+  border:1px solid var(--color-accent);
+  border-radius:12px;
+  padding:15px;
+  text-align:center;
+  transition:transform .3s,box-shadow .3s;
+  width:100%;
+  max-width:220px;
+  cursor:pointer;
 }
-@keyframes bounce{0%{transform: translateX(0);}100%{transform: translateX(5px);}}
-
-/* SEARCH */
-.search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
-#clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
-.search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
-.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16px}
-.search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
-
-/* ROPA - PRODUCTOS */
-section{padding:4rem 2rem;text-align:center}
-section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
-.products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
-@media (max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
-@media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
-.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s;cursor:pointer}
-.product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
-.product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
-.product h3{margin-bottom:.5rem;color:var(--color-secondary); font-family: var(--font-title);}
-.product .price{font-weight:bold;color:var(--color-primary)}
-
-/* FOOTER */
-footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
+.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
+.perfume img{width:100%;height:auto;border-radius:12px}
+.perfume h3{margin:10px 0 5px;font-size:1.1rem;font-family: var(--font-title);}
+.perfume p{margin:5px 0;font-size:0.9rem;color:#666}
+.perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
 /* MODAL */
-.modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px}
+.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;overflow:auto;padding:20px}
 .modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 .modal-left, .modal-right{flex:1;position:relative}
-.modal-left img{width:100%;height:100%;object-fit:cover;display:block;}
+.modal-left img{width:100%;height:100%;object-fit:cover;display:block;border-radius:12px;}
 .modal-right{display:flex;flex-direction:column;justify-content:center;gap:15px;padding:30px;text-align:left}
-.modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px; font-family: var(--font-title);}
+.modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px;font-family: var(--font-title);}
 .modal-right p{margin-bottom:5px;font-size:1rem;color:#444;}
 .price{color:#000;font-weight:bold;font-size:1.2rem}
+
+/* Presentaciones ml */
 .ml-options{display:flex;gap:10px;margin:10px 0;}
 .ml-option{flex:1;text-align:center;padding:10px;border:1px solid var(--color-accent);border-radius:20px;cursor:pointer;transition:all .3s;font-size:0.9rem;background:#f9f9f9;color:#333;}
 .ml-option:hover{border-color:#000;}
 .ml-option.active{background:#000;color:#fff;border-color:#000;}
+
+/* Cantidad con botones */
 .quantity-control{display:flex;align-items:center;gap:10px;margin:10px 0;}
 .quantity-btn{background:#000;color:#fff;border:none;width:35px;height:35px;border-radius:50%;font-size:1.2rem;cursor:pointer;transition:all .3s}
 .quantity-btn:hover{background:#333;}
 #quantity{width:50px;text-align:center;border:1px solid var(--color-accent);border-radius:6px;padding:6px;font-size:1rem}
+
+/* Botón carrito */
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
 
-/* CLOSE CORREGIDO */
+/* Cerrar modal */
 .close {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 32px;
-  font-weight: bold;
-  color: #000;
-  cursor: pointer;
-  z-index: 10;
-  user-select: none;
+  position:absolute;
+  top:15px;
+  right:15px;
+  font-size:32px;
+  font-weight:bold;
+  color:#000;
+  cursor:pointer;
+  z-index:10;
+  user-select:none;
   transition: color 0.3s;
 }
 .close:hover { color: #555; }
@@ -118,6 +105,8 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   .modal-left img{height:280px;object-fit:cover;}
   .modal-right{padding:20px;}
 }
+
+footer{text-align:center;padding:20px;font-size:0.9rem;background:#f9f9f9;margin-top:40px;color:#666;}
 </style>
 </head>
 <body>
@@ -129,82 +118,100 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </div>
   <nav>
     <ul>
-      <li><a href="index.html" id="homeLink">Inicio</a></li>
-      <li><a href="#ropa">Ropa</a></li>
-      <li><a href="perfumes.html" id="perfumesLink">Perfumes</a></li>
-      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="index.html#ropa">Ropa</a></li>
+      <li><a href="perfumes.html" class="active">Perfumes</a></li>
+      <li><a href="index.html#contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
 
-<section class="hero-banners" id="inicio">
-  <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
-  <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
-  <div class="banner"><img src="images/MODELO5.png" alt="Modelo 3"></div>
-  <span class="scroll-indicator">&#8594; Desliza</span>
-</section>
-
-<div class="search-container">
-  <span id="clearBtn">&times;</span>
-  <div class="search-bar">
-    <svg class="lupa" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="11" cy="11" r="7" stroke="black" stroke-width="2" fill="none"/>
-      <line x1="16" y1="16" x2="22" y2="22" stroke="black" stroke-width="2"/>
-    </svg>
-    <input type="text" id="searchInput" placeholder="Buscar productos (solo ropa en esta página)..." />
-  </div>
-</div>
-
-<section id="ropa">
-  <h2>Nuestra Ropa</h2>
-  <div class="products" id="ropaProducts"></div>
-</section>
-
-<section id="contacto">
-  <h2>Contacto</h2>
-  <p>Email: contacto@tutienda.com</p>
-  <p>Tel: +34 600 123 456</p>
-</section>
-
-<footer>
-  <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
-</footer>
+<main>
+  <h1>Nuestros Perfumes</h1>
+  <div class="perfumes" id="perfumesContainer"></div>
+</main>
 
 <!-- MODAL -->
-<div id="productModal" class="modal">
+<div class="modal" id="productModal">
   <div class="modal-content">
-    <span class="close">&times;</span>
+    <span class="close" id="closeModal">&times;</span>
     <div class="modal-left">
       <img id="modalImage" src="" alt="Producto">
     </div>
     <div class="modal-right">
       <h2 id="modalTitle"></h2>
       <p id="modalDescription"></p>
-      <p class="price" id="modalPrice">$220.00</p>
-      <label>Talla:</label>
+      <p id="modalPrice" class="price"></p>
+
+      <label>Presentación:</label>
       <div class="ml-options">
-        <div class="ml-option active" data-price="220">Mediana</div>
-        <div class="ml-option" data-price="220">Grande</div>
-        <div class="ml-option" data-price="220">Extra Grande</div>
+        <div class="ml-option active" data-ml="60ml" data-price="199">60 ml</div>
+        <div class="ml-option" data-ml="120ml" data-price="299">120 ml</div>
       </div>
+
       <label>Cantidad:</label>
       <div class="quantity-control">
         <button class="quantity-btn" id="decrease">-</button>
         <input type="text" id="quantity" value="1" readonly>
         <button class="quantity-btn" id="increase">+</button>
       </div>
+
       <button class="add-cart">Agregar al carrito 🛒</button>
     </div>
   </div>
 </div>
 
+<footer>
+  <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
+</footer>
+
 <script>
-// --- Tu JS de productos ropa, buscador, modal, cantidad, opciones ---
-// Aquí tu JS original funciona, solo asegurarse que modalClose se seleccione correctamente
-const modal = document.getElementById("productModal");
-const modalClose = modal.querySelector(".close");
-modalClose.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none"});
+// Lista de perfumes
+const perfumes = [
+  {name:"Mar Negro",description:"Oscuro, marino, misterioso.",price60:"$199.00",price120:"$299.00",image:"images/ADGPROFUMO.png"},
+  {name:"Neblina",description:"Fresco, salado, acuático.",price60:"$199.00",price120:"$299.00",image:"images/INV.png"},
+  {name:"Neblina Plateada",description:"Fresco, audaz, moderno.",price60:"$199.00",price120:"$299.00",image:"images/INVPLAT.png"},
+  {name:"Edén Tropical",description:"Exótico, tropical, vibrante.",price60:"$199.00",price120:"$299.00",image:"images/JEANGARD.png"},
+  {name:"Fortuna Dorada",description:"Dulce, audaz, opulento.",price60:"$199.00",price120:"$299.00",image:"images/LUCKY.png"},
+  {name:"Abismo Azul",description:"Acuático, fresco, profundo.",price60:"$199.00",price120:"$299.00",image:"images/PROFONDO.png"},
+  {name:"Sombra de Sándalo",description:"Leñoso, ahumado, robusto.",price60:"$199.00",price120:"$299.00",image:"images/SANTAL.png"},
+  {name:"Neblina V Elixir",description:"Intenso, picante, potente.",price60:"$199.00",price120:"$299.00",image:"images/VELIXIR.png"},
+  {name:"Océano Ígneo",description:"Elegante, fresco, audaz.",price60:"$199.00",price120:"$299.00",image:"images/BLEU.png"},
+  {name:"Legado",description:"Fresco, leñoso, complejo.",price60:"$199.00",price120:"$299.00",image:"images/CREED.png"},
+];
+
+// Renderizar perfumes
+const container = document.getElementById("perfumesContainer");
+perfumes.forEach((p,index)=>{
+  const div = document.createElement("div");
+  div.className="perfume";
+  div.innerHTML=`<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price60}</p>`;
+  div.addEventListener("click",()=>openModal(p));
+  container.appendChild(div);
+});
+
+// Modal
+const modal=document.getElementById("productModal");
+const modalClose=document.getElementById("closeModal");
+const modalTitle=document.getElementById("modalTitle");
+const modalDescription=document.getElementById("modalDescription");
+const modalPrice=document.getElementById("modalPrice");
+const modalImage=document.getElementById("modalImage");
+
+function openModal(perfume){
+  modal.style.display="flex";
+  modalTitle.textContent=perfume.name;
+  modalDescription.textContent=perfume.description;
+  modalPrice.textContent=perfume.price60;
+  modalImage.src=perfume.image;
+  // Reset opciones y cantidad
+  document.querySelectorAll(".ml-option").forEach(o=>o.classList.remove("active"));
+  document.querySelector(".ml-option").classList.add("active");
+  document.getElementById("quantity").value="1";
+}
+modalClose.addEventListener("click",()=>modal.style.display="none");
+window.addEventListener("click",e=>{if(e.target==modal) modal.style.display="none"});
 </script>
+
 </body>
 </html>
