--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>EREBUS - Inicio</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Neblina&display=swap');
-
 :root{
   --color-primary:#000;
   --color-secondary:#555;
@@ -18,20 +17,10 @@
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html, body{width:100%;margin:0;padding:0;overflow-x:hidden;}
-body{
-  font-family:var(--font-family);
-  background:var(--color-background);
-  color:var(--color-text);
-  line-height:1.6;
-  padding-top:120px;
-}
+body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px;}
 
 /* HEADER */
-header{
-  position:fixed;top:0;left:0;width:100%;
-  background:var(--color-primary);color:var(--color-background);z-index:1000;
-  transition:all .3s ease;
-}
+header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;transition:all .3s ease;}
 .logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
 .logo-container h1{font-size:1.8rem;color:#fff;margin:0;font-family: var(--font-title);}
@@ -42,17 +31,13 @@ nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 
-/* HERO - BANNERS */
+/* HERO */
 .hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
 .banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
 .banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
-.banner img:hover{ transform:scale(1.05); }
+.banner img:hover{transform:scale(1.05);}
 .scroll-indicator{display:none;position:absolute;right:10px;bottom:10px;font-size:1.2rem;background:rgba(0,0,0,0.5);color:#fff;padding:0.3rem 0.6rem;border-radius:4px;z-index:10;}
-@media(max-width:1024px){
-  .hero-banners{flex-wrap: nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling: touch;}
-  .banner{flex:0 0 100vw;scroll-snap-align:center;}
-  .scroll-indicator{display:block;animation: bounce 1s infinite alternate;}
-}
+@media(max-width:1024px){.hero-banners{flex-wrap: nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling: touch;}.banner{flex:0 0 100vw;scroll-snap-align:center;}.scroll-indicator{display:block;animation: bounce 1s infinite alternate;}}
 @keyframes bounce{0%{transform: translateX(0);}100%{transform: translateX(5px);}}
 
 /* SEARCH */
@@ -62,7 +47,7 @@ nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 .search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16px}
 .search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
 
-/* ROPA - PRODUCTOS */
+/* ROPA */
 section{padding:4rem 2rem;text-align:center}
 section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 .products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
@@ -98,20 +83,9 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
 
-/* CLOSE CORREGIDO */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 32px;
-  font-weight: bold;
-  color: #000;
-  cursor: pointer;
-  z-index: 10;
-  user-select: none;
-  transition: color 0.3s;
-}
-.close:hover { color: #555; }
+/* Tache fuera del contenido */
+.close{position:absolute;top:-10px;right:-10px;font-size:32px;font-weight:bold;color:#000;cursor:pointer;z-index:2100;transition:all .3s;}
+.close:hover{color:#555;}
 
 @media(max-width:1024px){
   .modal-content{flex-direction:column;width:95%;}
@@ -144,17 +118,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   <span class="scroll-indicator">&#8594; Desliza</span>
 </section>
 
-<div class="search-container">
-  <span id="clearBtn">&times;</span>
-  <div class="search-bar">
-    <svg class="lupa" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="11" cy="11" r="7" stroke="black" stroke-width="2" fill="none"/>
-      <line x1="16" y1="16" x2="22" y2="22" stroke="black" stroke-width="2"/>
-    </svg>
-    <input type="text" id="searchInput" placeholder="Buscar productos (solo ropa en esta página)..." />
-  </div>
-</div>
-
 <section id="ropa">
   <h2>Nuestra Ropa</h2>
   <div class="products" id="ropaProducts"></div>
@@ -173,7 +136,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 <!-- MODAL -->
 <div id="productModal" class="modal">
   <div class="modal-content">
-    <span class="close">&times;</span>
     <div class="modal-left">
       <img id="modalImage" src="" alt="Producto">
     </div>
@@ -195,16 +157,107 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
       </div>
       <button class="add-cart">Agregar al carrito 🛒</button>
     </div>
+    <span class="close" id="closeModal">&times;</span>
   </div>
 </div>
 
 <script>
-// --- Tu JS de productos ropa, buscador, modal, cantidad, opciones ---
-// Aquí tu JS original funciona, solo asegurarse que modalClose se seleccione correctamente
+// Productos ropa
+const ropaProducts = [
+   {id:1,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:2,name:"Playera Oversize Blanca 220g",description:"Cómoda y elegante.",price:"$220.00",image:"images/PLAYERABLANCA1.png",keywords:"playera blanca oversize"},
+   {id:3,name:"Playera Oversize Gris 220g",description:"Calidad premium.",price:"$220.00",image:"images/PLAYERAGRIS1.png",keywords:"playera gris oversize"},
+   {id:4,name:"Playera Oversize Azul 220g",description:"Suave y duradera.",price:"$220.00",image:"images/PLAYERAAZUL1.png",keywords:"playera azul oversize"},
+];
+
+// Renderizar productos
+const cont = document.getElementById('ropaProducts');
+function renderRopa(list){
+  cont.innerHTML = '';
+  (list||ropaProducts).forEach(p=>{
+    const div = document.createElement('div');
+    div.className = 'product';
+    div.innerHTML = `<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
+    div.addEventListener('click', ()=>openModal(p));
+    cont.appendChild(div);
+  });
+}
+renderRopa();
+
+// Buscador
+const searchInput = document.getElementById('searchInput');
+const clearBtn = document.getElementById('clearBtn');
+if(searchInput){
+  searchInput.addEventListener('input', ()=>{
+    const q = searchInput.value.trim().toLowerCase();
+    if(q){
+      clearBtn.style.display='inline-block';
+      const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q) || (p.keywords && p.keywords.toLowerCase().includes(q)));
+      renderRopa(filtered);
+    }else{ clearBtn.style.display='none'; renderRopa(); }
+  });
+  clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
+}
+
+// Header scroll
+const header = document.getElementById('mainHeader');
+let lastY=0;
+window.addEventListener('scroll', ()=>{
+  const y = window.pageYOffset || document.documentElement.scrollTop;
+  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
+  lastY = y<=0?0:y;
+});
+
+// Modal
 const modal = document.getElementById("productModal");
-const modalClose = modal.querySelector(".close");
+const modalImage = document.getElementById("modalImage");
+const modalTitle = document.getElementById("modalTitle");
+const modalDescription = document.getElementById("modalDescription");
+const modalPrice = document.getElementById("modalPrice");
+const modalClose = document.getElementById("closeModal");
+const decreaseBtn = document.getElementById("decrease");
+const increaseBtn = document.getElementById("increase");
+const quantityInput = document.getElementById("quantity");
+const addCartBtn = document.querySelector(".add-cart");
+const mlOptions = document.querySelectorAll(".ml-option");
+
+function openModal(product){
+  modal.style.display="flex";
+  modalImage.src = product.image;
+  modalTitle.textContent = product.name;
+  modalDescription.textContent = product.description;
+  modalPrice.textContent = product.price;
+  quantityInput.value = 1;
+  mlOptions.forEach(opt=>opt.classList.remove("active"));
+  mlOptions[0].classList.add("active");
+}
+
 modalClose.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none"});
+window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none";});
+
+decreaseBtn.addEventListener("click", ()=>{
+  let val = parseInt(quantityInput.value);
+  if(val>1) quantityInput.value = val-1;
+});
+increaseBtn.addEventListener("click", ()=>{
+  let val = parseInt(quantityInput.value);
+  quantityInput.value = val+1;
+});
+
+mlOptions.forEach(opt=>{
+  opt.addEventListener("click", ()=>{
+    mlOptions.forEach(o=>o.classList.remove("active"));
+    opt.classList.add("active");
+    modalPrice.textContent = "$220.00"; // Mantener signo pesos
+  });
+});
+
+addCartBtn.addEventListener("click", ()=>{
+  const cantidad = quantityInput.value;
+  const variant = document.querySelector(".ml-option.active").textContent;
+  alert(`Agregado al carrito: ${modalTitle.textContent} - Talla: ${variant} - Cantidad: ${cantidad}`);
+  modal.style.display="none";
+});
 </script>
 </body>
 </html>
