--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 .search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
 #clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
 .search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
-.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16px}
+.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16}
 .search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
 
 /* ROPA */
@@ -83,8 +83,18 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
 
-/* Tache fuera del contenido */
-.close{position:absolute;top:-10px;right:-10px;font-size:32px;font-weight:bold;color:#000;cursor:pointer;z-index:2100;transition:all .3s;}
+/* Botón cerrar modal */
+.close{
+  position:absolute;
+  top:10px;
+  right:10px;
+  font-size:32px;
+  font-weight:bold;
+  color:#000;
+  cursor:pointer;
+  z-index:2100;
+  transition:all .3s;
+}
 .close:hover{color:#555;}
 
 @media(max-width:1024px){
@@ -162,6 +172,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 </div>
 
 <script>
+// Aquí va todo tu JS tal como lo tenías
 // Productos ropa
 const ropaProducts = [
   {id:1,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
@@ -170,7 +181,6 @@ const ropaProducts = [
   {id:4,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
 
-// Renderizar productos
 const cont = document.getElementById('ropaProducts');
 function renderRopa(list){
   cont.innerHTML = '';
@@ -183,30 +193,6 @@ function renderRopa(list){
   });
 }
 renderRopa();
-
-// Buscador
-const searchInput = document.getElementById('searchInput');
-const clearBtn = document.getElementById('clearBtn');
-if(searchInput){
-  searchInput.addEventListener('input', ()=>{
-    const q = searchInput.value.trim().toLowerCase();
-    if(q){
-      clearBtn.style.display='inline-block';
-      const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q) || (p.keywords && p.keywords.toLowerCase().includes(q)));
-      renderRopa(filtered);
-    }else{ clearBtn.style.display='none'; renderRopa(); }
-  });
-  clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
-}
-
-// Header scroll
-const header = document.getElementById('mainHeader');
-let lastY=0;
-window.addEventListener('scroll', ()=>{
-  const y = window.pageYOffset || document.documentElement.scrollTop;
-  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
-  lastY = y<=0?0:y;
-});
 
 // Modal
 const modal = document.getElementById("productModal");
@@ -235,20 +221,14 @@ function openModal(product){
 modalClose.addEventListener("click", ()=>modal.style.display="none");
 window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none";});
 
-decreaseBtn.addEventListener("click", ()=>{
-  let val = parseInt(quantityInput.value);
-  if(val>1) quantityInput.value = val-1;
-});
-increaseBtn.addEventListener("click", ()=>{
-  let val = parseInt(quantityInput.value);
-  quantityInput.value = val+1;
-});
+decreaseBtn.addEventListener("click", ()=>{let val=parseInt(quantityInput.value); if(val>1) quantityInput.value=val-1;});
+increaseBtn.addEventListener("click", ()=>{let val=parseInt(quantityInput.value); quantityInput.value=val+1;});
 
 mlOptions.forEach(opt=>{
   opt.addEventListener("click", ()=>{
     mlOptions.forEach(o=>o.classList.remove("active"));
     opt.classList.add("active");
-    modalPrice.textContent = "$220.00"; // Mantener signo pesos
+    modalPrice.textContent = "$220.00";
   });
 });
 
@@ -259,5 +239,6 @@ addCartBtn.addEventListener("click", ()=>{
   modal.style.display="none";
 });
 </script>
+
 </body>
 </html>
